added new Projects

--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
         <h2>Animal Trading Card</h2>
         <a href="https://github.com/restinsofa"><i class="fab fa-github social-icons"></i></a>
       </figure>
+      <figure class="col-md-4">
+        <h2>Arcade Game</h2>
+        <a href="https://github.com/manuel-martinez-dev/fend_arcade_gamev1"><i class="fab fa-github social-icons"></i></a>
+      </figure>
+      <figure>
+        <h2>Memory Game</h2>
+        <a href="https://github.com/manuel-martinez-dev/fend_memory_game"><i class="fab fa-github social-icons"></i></a>
+      </figure>
+      <figure>
+        <h2>Restaurant reviews<h2>
+          <a href="https://github.com/manuel-martinez-dev/restaurant-app-udacity"><i class="fab fa-github social-icons"></i></a>
     </div>
   </main>
   <div class="col-md-12">
