added new projects

--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
       </figure>
       <figure>
         <h2>Restaurant reviews<h2>
-          <a href="https://github.com/manuel-martinez-dev/restaurant-app-udacity"><i class="fab fa-github social-icons"></i></a>
+            <a href="https://github.com/manuel-martinez-dev/restaurant-app-udacity"><i class="fab fa-github social-icons"></i></a>
+      </figure>
+      <figure>
+        <h2>Feedreader Test<h2>
+            <a href="https://github.com/manuel-martinez-dev/feed-reader-test"><i class="fab fa-github social-icons"></i></a>
+      </figure>
     </div>
   </main>
   <div class="col-md-12">
