--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
         <h2>Arcade Game</h2>
         <a href="https://github.com/manuel-martinez-dev/fend_arcade_gamev1"><i class="fab fa-github social-icons"></i></a>
       </figure>
-      <figure>
+      <figure class="col-md-4">
         <h2>Memory Game</h2>
         <a href="https://github.com/manuel-martinez-dev/fend_memory_game"><i class="fab fa-github social-icons"></i></a>
       </figure>
-      <figure>
+      <figure class="col-md-4">
         <h2>Restaurant reviews<h2>
             <a href="https://github.com/manuel-martinez-dev/restaurant-app-udacity"><i class="fab fa-github social-icons"></i></a>
       </figure>
-      <figure>
+      <figure class="col-md-4">
         <h2>Feedreader Test<h2>
             <a href="https://github.com/manuel-martinez-dev/feed-reader-test"><i class="fab fa-github social-icons"></i></a>
       </figure>
