added new images and updated font awesome

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <title>Manuel_Martinez_Portfolio_Website</title>
 
 </head>
@@ -36,7 +36,7 @@
     </div>
   </div>
   <main>
-    <p>Projects </p>
+    <p>Projects</p>
     <div class="row mid-images-container">
       <figure class="col-md-4">
         <img src="img/rockpaperscissors.png" alt="rock-paper-scissors-image" class="mid-images rounded responsive-image">
@@ -57,20 +57,28 @@
         <a href="https://github.com/restinsofa"><i class="fab fa-github social-icons"></i></a>
       </figure>
       <figure class="col-md-4">
+        <img src="img/arcade_game_img.jpg" alt="arcade-game-image" class="mid-images rounded responsive-image">
+        <figcaption class="figure-caption">source:personal</figcaption>
         <h2>Arcade Game</h2>
         <a href="https://github.com/manuel-martinez-dev/fend_arcade_gamev1"><i class="fab fa-github social-icons"></i></a>
       </figure>
       <figure class="col-md-4">
+        <img src="img/matching_game_image.jpg" alt="memory-game-image" class="mid-images rounded responsive-image">
+        <figcaption class="figure-caption">source:personal</figcaption>
         <h2>Memory Game</h2>
         <a href="https://github.com/manuel-martinez-dev/fend_memory_game"><i class="fab fa-github social-icons"></i></a>
       </figure>
       <figure class="col-md-4">
-        <h2>Restaurant reviews<h2>
-            <a href="https://github.com/manuel-martinez-dev/restaurant-app-udacity"><i class="fab fa-github social-icons"></i></a>
+        <img src="img/restaurant-app-img.jpg" alt="resturant-reviews-image" class="mid-images rounded responsive-image">
+        <figcaption class="figure-caption">source:personal</figcaption>
+        <h2>Restaurant reviews</h2>
+        <a href="https://github.com/manuel-martinez-dev/restaurant-app-udacity"><i class="fab fa-github social-icons"></i></a>
       </figure>
       <figure class="col-md-4">
-        <h2>Feedreader Test<h2>
-            <a href="https://github.com/manuel-martinez-dev/feed-reader-test"><i class="fab fa-github social-icons"></i></a>
+        <img src="img/jasmine_test_img.jpg" alt="Feedreader-test-image" class="mid-images rounded responsive-image">
+        <figcaption class="figure-caption">source:personal</figcaption>
+        <h2>Feedreader Test</h2>
+        <a href="https://github.com/manuel-martinez-dev/feed-reader-test"><i class="fab fa-github social-icons"></i></a>
       </figure>
     </div>
   </main>
