--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
         <img src="img/rockpaperscissors.png" alt="rock-paper-scissors-image" class="mid-images rounded responsive-image">
         <figcaption class="figure-caption">source:www.123rf.com</figcaption>
         <h2>OOP(Python3)</h2>
-        <a href="https://github.com/restinsofa"><i class="fab fa-github social-icons"></i></a>
+        <a href="https://github.com/manuel-martinez-dev/rps_1"><i class="fab fa-github social-icons"></i></a>
       </figure>
       <figure class="col-md-4">
         <img src="img/pixel-art-maker.png" alt="pixel-art-maker-image" class="mid-images rounded responsive-image">
         <figcaption class="figure-caption">source:www.udacity.com</figcaption>
         <h2>Pixel Art Maker</h2>
-        <a href="https://github.com/restinsofa"><i class="fab fa-github social-icons"></i></a>
+        <a href="https://github.com/manuel-martinez-dev/Pixel-Maker"><i class="fab fa-github social-icons"></i></a>
       </figure>
       <figure class="col-md-4">
         <img src="img/animal-trading-card.jpg" alt="animal-card-image" class="mid-images rounded responsive-image">
         <figcaption class="figure-caption">source:personal</figcaption>
         <h2>Animal Trading Card</h2>
-        <a href="https://github.com/restinsofa"><i class="fab fa-github social-icons"></i></a>
+        <a href="https://github.com/manuel-martinez-dev/animal_trading_cards"><i class="fab fa-github social-icons"></i></a>
       </figure>
       <figure class="col-md-4">
         <img src="img/arcade_game_img.jpg" alt="arcade-game-image" class="mid-images rounded responsive-image">
@@ -87,8 +87,8 @@
   </div>
   <footer>
     <div class="social-icons">
-      <a href="https://github.com/restinsofa"><i class="fab fa-github fa-1x"></i></a>
-      <a href="https://www.linkedin.com/in/manuel-martinez-2055a9127/"><i class="fab fa-linkedin fa-1x"></i></a>
+      <a href="https://github.com/manuel-martinez-dev"><i class="fab fa-github fa-1x"></i></a>
+      <a href="https://www.linkedin.com/in/mmartinez-web-developer/"><i class="fab fa-linkedin fa-1x"></i></a>
       <a href="https://www.instagram.com/restinsofa/"><i class="fab fa-instagram fa-1x"></i></a>
       <a href="https://restinsofa.tumblr.com/"><i class="fab fa-tumblr"></i></a>
     </div>
